--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 <h2>Practice Assignments</h2>
 <a target="_blank" href="HTML1/index.html">Practice 1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
+<a target="_blank" href="HTML1A/bistro/index.html">Practice 1A</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
 <a target="_blank" href="HTML1B/FAQ.html">Practice 1B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<!--<a target="_blank" href="HTML2/cactus.html">Practice 2</a>
+<a target="_blank" href="HTML2/cactus.html">Practice 2</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a target="_blank" href="">Practice 3</a>
+<!--<a target="_blank" href="">Practice 3</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a target="_blank" href="HTML3B/glossary.html">Practice 3B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
