--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a target="_blank" href="HTML1A/bistro/index.html">Practice 1A</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a target="_blank" href="HTML1B/FAQ.html">Practice 1B</a>
+<a target="_blank" href="HTML1B/HTML1B/FAQ.html">Practice 1B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a target="_blank" href="HTML2/cactus.html">Practice 2</a>
+<a target="_blank" href="HTML2/HTML2Files/cactus.html">Practice 2</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <!--<a target="_blank" href="">Practice 3</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
