--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <h1>Home Page for Orson Stanley</h1>
 <hr />
 <h2>Projects</h2>
-<!--<a target="_blank" href="Project1/index.htm">Project 1</a>
+<a target="_blank" href="Project1/index.htm">Project 1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a target="_blank" href="Project2/AboutUs.html">Project 2A</a>
+<!--<a target="_blank" href="Project2/AboutUs.html">Project 2A</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a target="_blank" href="Project2/Tributes.html">Project 2B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
