--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a target="_blank" href="HTML2/HTML2Files/cactus.html">Practice 2</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<!--<a target="_blank" href="">Practice 3</a>
+<a target="_blank" href="HTML3Files/index.html">Practice 3</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a target="_blank" href="HTML3B/glossary.html">Practice 3B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a target="_blank" href="HTML4A/index.html">Practice 4A</a>
+<!--<a target="_blank" href="HTML4A/index.html">Practice 4A</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a target="_blank" href="HTML5/index.html">Practice 5</a>-->
 
