--- a/HTML3B/glossary.html
+++ b/HTML3B/glossary.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8"">
+<meta charset="utf-8">
 <title>Glossary</title>
 </head>
 <body>
@@ -117,7 +117,7 @@
 <dd>Hypertext Transfer Protocol; the system that defines how web pages and media are requested and transferred between servers and browsers.</dd>
 </dl>
 
-<a href="top">Return to top</a>
+<a href="#top">Return to top</a>
 
 <h2>I</h2>
 
@@ -172,7 +172,7 @@
 <dd>Reducing file size to improve transfer time over the network.</dd>
 </dl>
 
-<a href="top">Return to top</a>
+<a href="#top">Return to top</a>
 
 <h2>P</h2>
 <dl>
@@ -257,7 +257,7 @@
 <dd>eXtensible Markup Language; a metalanguage for creating custom markup languages</dd>
 </dl>
 
-<a href=""top>Return to top</a>
+<a href="#top">Return to top</a>
 
 </body>
 </html>
