--- a/HTML3Files/index.html
+++ b/HTML3Files/index.html
@@ -19,9 +19,9 @@
 
 <h3 id="Things"> Things I Like to Do:</h3>
 <ul>
-   <li><a href="file:///D:/INFO2420-Spring2026/HTML3Files/Pages/Reading/Reading.html"> Reading </a> </li>
-   <li><a href="file:///D:/INFO2420-Spring2026/HTML3Files/Pages/Movies.html">Going to the movies</a> </li>
-   <li> <a href ="file:///D:/INFO2420-Spring2026/HTML3Files/Pages/Hiking.html"> Hiking and camping</a> </li>
+   <li><a href="Pages/Reading/Reading.html"> Reading </a> </li>
+   <li><a href="Pages/Movies.html">Going to the movies</a> </li>
+   <li> <a href ="Pages/Hiking.html"> Hiking and camping</a> </li>
 </ul>
 
 <hr>
@@ -64,7 +64,7 @@
 <h3 id ="Remarks">Final Remarks:</h3>
 
 <p>
-	If you would like, you are welcomed to modify these list of 
+	If you would like, you are welcome to modify these lists of 
 	favorite things to be your own favorite things. 	
 	Feel free to express your true feelings or not. 
 	You may also insert additional items to these lists or delete items.  
