--- a/HTML3Files/index.html
+++ b/HTML3Files/index.html
@@ -19,9 +19,9 @@
 
 <h3 id="Things"> Things I Like to Do:</h3>
 <ul>
-   <li><a href="Pages/Reading/Reading.html"> Reading </a> </li>
-   <li><a href="Pages/Movies.html">Going to the movies</a> </li>
-   <li> <a href ="Pages/Hiking.html"> Hiking and camping</a> </li>
+   <li><a target="_blank" href="Pages/Reading/Reading.html"> Reading </a> </li>
+   <li><a target="_blank"href="Pages/Movies.html">Going to the movies</a> </li>
+   <li> <a target="_blank" href ="Pages/Hiking.html"> Hiking and camping</a> </li>
 </ul>
 
 <hr>
