--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <h2>Projects</h2>
 <a target="_blank" href="Project1/index.htm">Project 1</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a target="_blank" href="Project2/start/AboutUs.html">Project 2A</a>
+<a target="_blank" href="Project2/start/AboutUs.html">Project 2 - About Us</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a target="_blank" href="Project2/start/Tributes.html">Project 2B</a>
+<a target="_blank" href="Project2/start/Tributes.html">Project 2 - Tributes</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <!--<a target="_blank" href="Project3/AboutUs.html">Project 3A</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
