HTML4B and index.html edit

--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
 <title>Orson Stanley's Home Page</title>
 </head>
 
+<style type="text/css">
+
+@font-face{
+	font-family:'bendable';
+	src: url('HTML4B/fonts/bendable.eot'); 
+	src: local('bendable'), url('HTML4B/fonts/bendable.ttf') format('truetype') ;
+   
+}
+
+.name{
+	font-family: bendable, Geneva, serif;
+}
+</style>
+
 <body>
-<h1>Home Page for Orson Stanley</h1>
+<h1>Home Page for <span class="name">Orson Stanley</span></h1>
 <hr />
 <h2>Projects</h2>
 <a target="_blank" href="Project1/index.htm">Project 1</a>
@@ -32,9 +46,11 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a target="_blank" href="HTML3B/glossary.html">Practice 3B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<!--<a target="_blank" href="HTML4A/index.html">Practice 4A</a>
+<a target="_blank" href="HTML4A/index.html">Practice 4A</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a target="_blank" href="HTML5/index.html">Practice 5</a>-->
+<a target="_blank" href="HTML4B/CSS3Fonts.html">Practice 4B</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<!--<a target="_blank" href="HTML5/index.html">Practice 5</a>-->
 
 <hr />
 <h2>Book Assignments</h2>
