--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a target="_blank" href="HTML4B/CSS3Fonts.html">Practice 4B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<!--<a target="_blank" href="HTML5/index.html">Practice 5</a>-->
+<a target="_blank" href="HTML5/index.html">Practice 5</a>
 
 <hr />
 <h2>Book Assignments</h2>
