--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 <a target="_blank" href="HTML4B/CSS3Fonts.html">Practice 4B</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a target="_blank" href="HTML5/index.html">Practice 5</a>
+&nbsp;&nbsp;|&nbsp;&nbsp;
+<a target="_blank" href="HTML5B/bistro.html">Practice 5B</a>
+
 
 <hr />
 <h2>Book Assignments</h2>
