--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 &nbsp;&nbsp;|&nbsp;&nbsp;
 <a target="_blank" href="Project2/start/Tributes.html">Project 2 - Tributes</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a target="_blank" href="Project3/AboutUs.html">Project 3A</a>
+<a target="_blank" href="Project3/AboutUs.html">Project 3 - About Us</a>
 &nbsp;&nbsp;|&nbsp;&nbsp;
-<a target="_blank" href="Project3/Tributes.html">Project 3B</a>
+<a target="_blank" href="Project3/Tributes.html">Project 3 - Tributes</a>
 <hr />
 <h2>Practice Assignments</h2>
 <a target="_blank" href="HTML1/index.html">Practice 1</a>
